# flask-library-web-app

./: .gitignore  Dockerfile  README.md  main.py  miscel.py  pyproject.toml  requirements.txt
.github/workflows/: flasklibrarywebapp-AutoDeployTrigger-5433b9c5-ac57-4968-b81e-e4542d14cf31.yml
instance/: new-books-collection.db
static/: styles.css
templates/: add.html  base.html  delete.html  edit_rating.html  index.html
terraform/: acr.tf  container-app.tf  main.tf
